Ignore .vscode folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-trab03/.vscode/tasks.json
-trab03/mitsuo
-trab03/mitsuo.c
-trab03/main
-trab03/simple-way/main
-trab03/main
+extras/amigos
+
+.vscode
